// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive layout visual agreements matches the active docked-core render snapshot 1`] = `
"  Synax v0.0.22-alpha  Tool  0:02

  ✽ note Inspecting files before editing.                                        ┌ Synax Core ──────────────────────┐
                                                                                 │               ˙  ˙               │
  $ npm test -- src/__tests__/interactive-tui.test.ts                            │           ···╲◆│││◆· ˙           │
    output     PASS                                                              │       ·  ╲◆  ╭─────╮ ╱◆ ··       │
                                                                                 │       ●  ─  ●│●●●●●│ ●◆  ●       │
                                                                                 │       ●  ╱◆  ╰─────╯ ╲◆  ●       │
                                                                                 │           · ˙╱◆│││◆˙ ·           │
                                                                                 │               ˙  ˙               │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Loaded                │
                                                                                 │Model       Qwen Local            │
                                                                                 │Route       Relay · qwen-local    │
                                                                                 │Provider    Relay                 │
                                                                                 │Context     —                     │
                                                                                 │ctx ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       bash                  │
                                                                                 │Steps       —                     │
                                                                                 └──────────────────────────────────┘



┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ continue polishing the feed                                                                                         │
│                                                                                                                     │
└ Enter submit | Ctrl+C exit | /help | !cmd shell ────────────────────────────────────────────────────────────────────┘"
`;

exports[`interactive layout visual agreements matches the blocked budget-exhausted render snapshot 1`] = `
"  Synax v0.0.22-alpha  Budget exhausted  0:00

                                                                                 ┌ Synax Core ──────────────────────┐
                                                                                 │               ·  ×               │
  ? error      terminal issue                                                    │           .  ╲│││×╱  ×           │
    next       inspect the message below, then rerun                             │       ·  ╲×  ╭─────╮ ×╱  ×       │
    message    max steps exceeded: 32                                            │       •  •  ×│×•×••│  •          │
                                                                                 │       •  ╱•  ╰─────╯ •╲  •       │
                                                                                 │           .  ╱││││╲  ·           │
                                                                                 │               .  .               │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Unloaded              │
                                                                                 │Model       —                     │
                                                                                 │Provider    —                     │
                                                                                 │Context     —                     │
                                                                                 │ctx ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       none                  │
                                                                                 │Steps       32/32                 │
                                                                                 └──────────────────────────────────┘





┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Ask Synax to inspect, edit, test, or commit…                                                                        │
└ Enter submit | Ctrl+C exit | /help | !cmd shell ────────────────────────────────────────────────────────────────────┘"
`;

exports[`interactive layout visual agreements matches the completed render snapshot 1`] = `
"  Synax v0.0.22-alpha  Ready  0:00

  No runtime events yet.                                                         ┌ Synax Core ──────────────────────┐
                                                                                 │              ·    ·              │
                                                                                 │          ·  ╲╲│  │╱╱  .          │
                                                                                 │          ╲  ·╭─────╮  ╱          │
                                                                                 │         ─◎ ◎◎│◎◎◎◎◎│◎ ◎─         │
                                                                                 │          ╱  ◎╰─────╯  ╲          │
                                                                                 │          ·  ╱╱   │╲╲· ·          │
                                                                                 │              .    .              │
                                                                                 │                                  │
                                                                                 │Runtime                           │
                                                                                 │Core        Complete              │
                                                                                 │Model       —                     │
                                                                                 │Provider    —                     │
                                                                                 │Context     —                     │
                                                                                 │ctx ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                                                                                 │                                  │
                                                                                 │Session                           │
                                                                                 │Thinking    —                     │
                                                                                 │Spend       —                     │
                                                                                 │Tools       none                  │
                                                                                 │Steps       3                     │
                                                                                 └──────────────────────────────────┘





┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Ask Synax to inspect, edit, test, or commit…                                                                        │
└ Enter submit | Ctrl+C exit | /help | !cmd shell ────────────────────────────────────────────────────────────────────┘"
`;

exports[`interactive layout visual agreements matches the idle large-core render snapshot 1`] = `
"  Synax v0.0.22-alpha  Idle  0:02


                               ·  ·.                Runtime
                           ·╲╲╲╲  ·.  ╱╱╱╱.         Core        Unloaded
                       ◎  ╲╲  ◎╭───────╮  ╱╱  ◎     Model       —
                      ◎  ─◎  ◎ │◎◎◎◎◎◎◎│◎  ◎─  ◎    Provider    —
                      · ─.   ..│◎◎◎◎◎◎◎│.   ·─      Context     —
                      ·  ─.  . │◎◎◎◎◎◎·│·  ·─  .    ctx ░░░░░░░░░░░░░░░░░░░░░░
                       .  ╱╱  ·╰───────╯  ╲╲  ·
                           .╱╱╱╱      ╲╲╲╲·  ·      Session
                                  ..  .             Thinking    —
                                                    Spend       —
                                                    Tools       none
                                                    Steps       —






┌─────────────────────────────────────────────────────────────────────────────┐
│ Ask Synax to inspect, edit, test, or commit…                                │
└ Enter submit | Ctrl+C exit | /help | !cmd shell ────────────────────────────┘"
`;

exports[`interactive layout visual agreements matches the narrow terminal fallback snapshot 1`] = `
"  Synax v0.0.22-alpha  Working  0:02

  ✽ note Inspecting files before editing.


  ◌ working








┌─────────────────────────────────────────────────────┐
│ short task                                          │
│                                                     │
└ Enter submit | Ctrl+C exit | /help | !cmd shell ────┘"
`;
